[package]
name = "hal_base"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS hardware abstraction layer, provides unified APIs for platform-specific operations"
license = "GPL-3.0-or-later OR Apache-2.0"

[dependencies]
cfg-if = "1.0"
config = { git = "ssh://git@github.com/shilei-massclouds/config.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
kernel_guard = { git = "ssh://git@github.com/shilei-massclouds/kernel_guard.git" }
percpu = { git = "ssh://git@github.com/shilei-massclouds/percpu.git" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
bitflags = "2.2"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_pl011 = { git = "ssh://git@github.com/Byte-OS/arm_pl011.git" }

[build-dependencies]
config = { git = "ssh://git@github.com/shilei-massclouds/config.git" }
